[package]
name = "telety-impl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/telety"
description = "Common code for telety. Not intended for public use."

[dependencies]
bitflags = "2.4.2"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "extra-traits", "visit", "visit-mut"] }

[features]
default = ["v1"]
v1 = []
