[package]
name = "telety-impl"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/telety"
description = "Common code for telety. Not intended for public use."

[dependencies]
bitflags = { workspace = true }
proc-macro2 = { workspace = true }
quote =  { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }

[features]
v1 = []
