[package]
name = "telety-macro"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/telety"
description = "Proc macros for telety. Not intended for public use."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "visit", "visit-mut"] }
telety-impl = { version = "0.2", path = "../telety-impl" }