[package]
name = "telety-macro"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/telety"
description = "Proc macros for telety. Not intended for public use."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "visit", "visit-mut"] }
telety-impl = { workspace = true }

[features]
v1 = ["telety-impl/v1"]
full-errors = []