[package]
name = "telety-macro"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/telety"
description = "Proc macros for telety. Not intended for public use."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

telety-impl = { workspace = true }

directed-visit = { workspace = true }

[features]
v1 = ["telety-impl/v1"]
full-errors = []