[package]
name = "telety"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/telety"
readme = "../README.md"
description = "Access type information across crates and modules in your proc macros"
keywords = ["macro", "generator", "reflection", "compile-time"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["visit", "visit-mut"] }
telety-impl = { version = "0.1", default-features = false }
telety-macro = "0.1"

[features]
default = ["v1"]
v1 = ["telety-impl/v1"]