[package]
name = "telety"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/telety"
readme = "../README.md"
description = "Access type information across crates and modules in your proc macros"
keywords = ["macro", "generator", "reflection", "compile-time"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["visit", "visit-mut"] }
telety-impl = { workspace = true }
telety-macro = { workspace = true }

[features]
default = ["v1", "full-errors"]
v1 = ["telety-impl/v1", "telety-macro/v1"]
full-errors = ["telety-macro/full-errors"]
